--- a/style.scss
+++ b/style.scss
@@ -39,18 +39,46 @@
             color: gray;
         }
 }
-@mixin dispoTextFooter{
-    color: white;
+
+
+
+@mixin footerDisplay{
+    background-color: rgb(53,53,53);
+    padding-top: 1em;
+    margin-top: 2em;
+    width: 100%;
+    padding-bottom: 10%;
+    .ImageFooter{
+        margin-top: 2em;
+
+        margin-left: 5%;
+        height: 4em;
+        img{
+            color: white;
+            height: 100%;
+        }
+    }
+    .Proposer ,.Partenaire,.Mention,.Contact{
+        color: white;
         display: flex;
-        font-size: 3.2em;
+        font-size: 2.3em;
         font-family: $Police1;
         align-items: center;
         margin-left: 5%;
         i{
-            
             margin-right: 5%;
         }
+        p{
+            margin-bottom: 0em;
+        }
+        
+
+    }
+    
+    
+    
 }
+
 
 
 
@@ -88,11 +116,15 @@ header{
     background-color: $backgroundGreyDarker;
         &__iconLocalisation{
             font-size: 3em;
+            
+            
 
         }
         &__textLocalisation{
-            margin-left: 2em;
-            font-size: 2.9em;
+            margin-left: 1.5em;
+            font-size: 2.6em;
+            white-space: nowrap;
+            padding-right: 13%;
         }
 
 }
@@ -100,8 +132,8 @@ header{
     background-color: $backgroundGreyLighter;
     margin-top: 0em;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     &__Slogan{
         margin-top: 0em;
         font-family: $Police1__Bold;
@@ -113,8 +145,8 @@ header{
     }
     &__sousTitre{
         font-family: $Police1__Light;
-        font-size: 3em;
-        margin-left: 10%;
+        font-size: 1.3em;
+        text-align: center;
     }
     &__btnExplorerNosRestaurants{
         background: linear-gradient(#FF79DA,#9356DC);
@@ -173,7 +205,7 @@ header{
         font-family: $Police1__Bold;
         font-size: 5em;
         margin-left: 10%;
-        margin-bottom: 2em;
+        margin-bottom: 1em;
 
     }
     a{
@@ -208,7 +240,7 @@ header{
 
                 border-radius: 14px;
                 p{
-                    color: opacity($color: #C2C2C2);
+                    opacity: 0.5;
                     margin: 0.5em;
                 }
             }
@@ -217,7 +249,7 @@ header{
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-left: 10%;
+            margin-left: 4%;
             &__text{
                 &__Nom{
                     font-size: 4em;
@@ -235,7 +267,6 @@ header{
                 position: relative;
 
                 font-size: 6em;
-                font-weight:2em ;
                 margin-right: 5%;
 
                 i{
@@ -274,36 +305,5 @@ header{
     }
 }
 footer{
-    background-color: rgb(53,53,53);
-    padding-top: 1em;
-    margin-top: 2em;
-    width: 100%;
-    .ImageFooter{
-        margin-top: 2em;
-
-        margin-left: 5%;
-        height: 4em;
-        img{
-            color: white;
-            height: 100%;
-        }
-    }
-    .Proposer{
-        @include dispoTextFooter;
-        
-
-    }
-    .Partenaire{
-        @include dispoTextFooter;
-
-    }
-    
-    .Mention{
-        @include dispoTextFooter();
-        
-    }
-    .Contact{
-        @include dispoTextFooter;
-    }
-      
+   @include footerDisplay();  
 }
